--- a/tiga.html
+++ b/tiga.html
@@ -21,7 +21,7 @@
                    untuk apapun mimpi yang kaka inginkan semoga bisa tercapai. Aku akan selalu support kaka untuk apa yang kaka lakukan hari ini dan untuk kedepannya asal itu baik. Kaka adalah orang hebat 🌟🌟🌟<br><span>New chapter di usia 18</span>
                    semoga kaka menjalani kehidupan yang luar biasa. Terimakasih udah hadir di dunia ini, Teruslah tersenyum.Aku harap 
                    kaka bisa mendapatkan hari ulang tahun yang indah, enjoy your day ka. Ambil banyak gambar, lakuin hal hal yang
-                   bikin kaka happy.<br><span>Happy Birthday to an amazing person🤩</span>
+                   bikin kaka seneng.<br><span>Happy Birthday to an amazing person🤩</span>
                     <br> <h5 class="nama">- sinta</h5></p>
             <audio autoplay><source src="assets/audio/hbd.mp3" type="audio/mp3"></audio>
                     </div>
