--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </center>
     <h2 class="welcome">Ini pasti ka boki ya?</h2>
     <br>
-    <p class="words">Sebelum nya makasih ka udah berkenan meluangkan waktunya untuk klik link ini.<br> Aku harap kaka baca sampai habis ya.
+    <p class="words">Sebelum nya makasih ka udah berkenan meluangkan waktunya untuk klik link ini.<br> Aku harap kaka liat sampai habis ya.
         Emm maaf kalo tampilan nya berantakan hehe soalnya aku baru belajar bikin web. Enjoy kak!</p>
     <br>
     <h3 class="next">Kalo ini ka boki lanjut ya</h3>
